--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "babel-plugin-react-compiler": "^19.0.0-beta-e993439-20250328",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "font-awesome": "^4.7.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
